[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zsoil_tools"
version = "1.3.25"
description = "Tools for pre- and postprocessing ZSoil data"
readme = "README.md"
keywords = ["ZSoil", "finite elements"]
license = { text = "GNU AGPLv3" }
authors = [
    { name = "Matthias Preisig", email = "mpreisig@geomod.ch" }
]

classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.7"
]

dependencies = [
    "xlsxwriter",
    "numpy",
    "vtk"
]

[project.urls]
Homepage = "http://www.geomod.ch"

[tool.setuptools.packages]
# Equivalent to find_packages(exclude=[...])
find = { exclude = ["contrib", "docs", "tests"] }
